修复迁移NewFormulaViewController 的Bug，目前已经可以正常运行， 添加 NewFormulaButton 的消失动画，目前在 LibraryFormula 视图 NewFormulaButton 不可见

--- a/Lucuber/Base.lproj/Formula.storyboard
+++ b/Lucuber/Base.lproj/Formula.storyboard
@@ -66,6 +66,7 @@
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="mIx-sU-v76"/>
                                 </constraints>
                                 <state key="normal" backgroundImage="plus"/>
+                                <state key="disabled" backgroundImage="plus"/>
                                 <variation key="default">
                                     <mask key="constraints">
                                         <exclude reference="QyG-VI-UpD"/>
@@ -86,6 +87,7 @@
                     <navigationItem key="navigationItem" id="Lt6-Qk-mcl"/>
                     <connections>
                         <outlet property="newFormulaButton" destination="7mJ-Cr-lKZ" id="kbw-V4-JHu"/>
+                        <outlet property="newFormulaButtonTrailing" destination="mwD-lg-xTa" id="B1L-DB-x30"/>
                         <segue destination="vqd-NG-bg4" kind="presentation" identifier="ShowNewFormula" id="tUZ-bw-IOL"/>
                     </connections>
                 </viewController>
