--- a/Lucuber/Views/NewFormulaCell/newFormulaTextCell/NewFormulaTextCell.xib
+++ b/Lucuber/Views/NewFormulaCell/newFormulaTextCell/NewFormulaTextCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="NewFormulaTextCell" id="KGk-i7-Jjw" customClass="NewFormulaTextCell" customModule="Lucuber" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="NewFormulaTextCell" id="KGk-i7-Jjw" customClass="NewFormulaTextCell" customModule="Lucuber" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -29,7 +29,7 @@
             <connections>
                 <outlet property="indicaterLabel" destination="gka-3e-2Od" id="13M-48-sag"/>
             </connections>
-            <point key="canvasLocation" x="439" y="346"/>
+            <point key="canvasLocation" x="354" y="268"/>
         </tableViewCell>
     </objects>
 </document>
