重构 Detail 控制器的 CollectionCell， 增加 SegmentedControl 切换公式 Rotation。 重新排列 Seciton 。实现 6 和 6plus 在进入 Detail 时不需要滑动屏幕可以看到完整的公式内容。

--- a/Lucuber/ViewControllers/FormulaDetail/FormulaDetail.storyboard
+++ b/Lucuber/ViewControllers/FormulaDetail/FormulaDetail.storyboard
@@ -8,7 +8,7 @@
         <!--Formula Detail View Controller-->
         <scene sceneID="dUP-Ml-dDP">
             <objects>
-                <viewController id="Nc2-BK-DNv" customClass="FormulaDetailViewController" customModule="Lucuber" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController hidesBottomBarWhenPushed="YES" id="Nc2-BK-DNv" customClass="FormulaDetailViewController" customModule="Lucuber" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="to8-7L-17K"/>
                         <viewControllerLayoutGuide type="bottom" id="e43-8T-pBD"/>
