为 CommentViewController 添加测试数据，并完善其中的 UICollectionView 在 header 高度变化以及 keyboard 出现消失时正确更改其 contentInset 的数值。

--- a/Lucuber/ViewControllers/Comment/Comment.storyboard
+++ b/Lucuber/ViewControllers/Comment/Comment.storyboard
@@ -8,7 +8,7 @@
         <!--Comment View Controller-->
         <scene sceneID="jqh-GL-BGv">
             <objects>
-                <viewController id="jiM-FX-gkC" customClass="CommentViewController" customModule="Lucuber" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="jiM-FX-gkC" customClass="CommentViewController" customModule="Lucuber" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="vsu-8G-C4j"/>
                         <viewControllerLayoutGuide type="bottom" id="i65-1I-lQw"/>
@@ -35,6 +35,10 @@
                                         </view>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="jiM-FX-gkC" id="ing-W1-0L6"/>
+                                    <outlet property="delegate" destination="jiM-FX-gkC" id="O8U-kN-PnL"/>
+                                </connections>
                             </collectionView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ted-2d-pyQ" customClass="MessageToolbar" customModule="Lucuber" customModuleProvider="target">
                                 <items/>
@@ -43,18 +47,23 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="i65-1I-lQw" firstAttribute="top" secondItem="Tb1-iS-vQ8" secondAttribute="bottom" id="3HS-7N-gja"/>
                             <constraint firstItem="Tb1-iS-vQ8" firstAttribute="top" secondItem="dXt-Xo-ibe" secondAttribute="top" id="3Pb-DX-bpX"/>
                             <constraint firstItem="EJP-Cy-LJ4" firstAttribute="centerX" secondItem="dXt-Xo-ibe" secondAttribute="centerX" id="7aP-XT-ecU"/>
                             <constraint firstItem="EJP-Cy-LJ4" firstAttribute="top" secondItem="dXt-Xo-ibe" secondAttribute="top" constant="140" id="B7h-el-xRV"/>
-                            <constraint firstItem="i65-1I-lQw" firstAttribute="top" secondItem="Tb1-iS-vQ8" secondAttribute="bottom" id="Duo-jA-pz0"/>
                             <constraint firstItem="Tb1-iS-vQ8" firstAttribute="leading" secondItem="dXt-Xo-ibe" secondAttribute="leading" id="KPY-li-6qb"/>
                             <constraint firstAttribute="trailing" secondItem="Tb1-iS-vQ8" secondAttribute="trailing" id="Q79-3p-oeb"/>
                             <constraint firstAttribute="trailing" secondItem="ted-2d-pyQ" secondAttribute="trailing" id="VB3-ix-iV0"/>
-                            <constraint firstItem="i65-1I-lQw" firstAttribute="top" secondItem="ted-2d-pyQ" secondAttribute="bottom" id="uDq-cy-NGW"/>
+                            <constraint firstItem="i65-1I-lQw" firstAttribute="top" secondItem="ted-2d-pyQ" secondAttribute="bottom" constant="100" id="sGf-cH-PBl"/>
                             <constraint firstItem="ted-2d-pyQ" firstAttribute="leading" secondItem="dXt-Xo-ibe" secondAttribute="leading" id="ySN-KF-QML"/>
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="commentCollectionView" destination="Tb1-iS-vQ8" id="mRX-01-LW1"/>
+                        <outlet property="messageToolbar" destination="ted-2d-pyQ" id="Pic-Fn-eUW"/>
+                        <outlet property="messageToolbarBottomConstraints" destination="sGf-cH-PBl" id="wWT-Sm-X5r"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WUd-oc-epC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
